--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
+    "@types/qrcode-terminal": "^0.12.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^3.9.3"
