--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.11.16",
     "axios": "^1.6.0",
     "dotenv": "^8.2.0",
+    "openai": "^4.26.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
   },
